<resources>
    <string name="app_name">PolyglotApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="choose_language_fragment_label">Choose Languages</string>
    <string name="choose_game_fragment_label">Choose game</string>
    <string name="flashcards_fragment_label">Flashcards game</string>
    <string name="fragment_all_words_label">Your words</string>
    <string name="quiz_fragment_label">Quiz game</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="source_language">Your language</string>
    <string name="target_language">Language you want to learn</string>
    <string name="flashcards_icon_text">Flashcards</string>
    <string name="quiz_icon_text">Quiz</string>
    <string name="start_game_flashcards_fragment"> </string>
    <string name="start_game_quiz_fragment">Starting game quiz</string>
    <string name="know_word_game_flashcards_fragment">Yes</string>
    <string name="dont_know_word_game_flashcards_fragment">No</string>
    <string name="see_all_words_flashcards_fragment">See my words</string>
    <string name="learned_words">Learned words</string>
    <string name="not_learned_words">Not learned yet</string>
    <string name="transfer_word">Transfer</string>
    <string name="choose_game">Choose your lessons</string>
    <string name="previous_button">Previous</string>
    <string name="submit_button">Submit</string>
    <string name="guess_definition">Guess the word by description</string>
</resources>