<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ChooseLanguageFragment">

    <fragment
        android:id="@+id/ChooseLanguageFragment"
        android:name="pl.potocki.polyglotapp.ChooseLanguageFragment"
        android:label="@string/choose_language_fragment_label"
        tools:layout="@layout/fragment_choose_language">

        <action
            android:id="@+id/action_ChooseLanguageFragment_to_ChooseGameFragment"
            app:destination="@id/ChooseGameFragment" />
    </fragment>
    <fragment
        android:id="@+id/ChooseGameFragment"
        android:name="pl.potocki.polyglotapp.ChooseGameFragment"
        android:label="@string/choose_game_fragment_label"
        tools:layout="@layout/fragment_choose_game">

        <action
            android:id="@+id/action_ChooseGameFragment_to_ChooseLanguageFragment"
            app:destination="@id/ChooseLanguageFragment" />
        <action
            android:id="@+id/action_ChooseGameFragment_to_FlashcardsFragment"
            app:destination="@id/FlashcardsFragment" />
        <action
            android:id="@+id/action_ChooseGameFragment_to_QuizFragment"
            app:destination="@id/QuizFragment" />
    </fragment>
    <fragment
        android:id="@+id/FlashcardsFragment"
        android:name="pl.potocki.polyglotapp.FlashcardsFragment"
        android:label="@string/flashcards_fragment_label"
        tools:layout="@layout/fragment_flashcards">

        <action
            android:id="@+id/action_FlashcardsFragment_to_ChooseGameFragment"
            app:destination="@id/ChooseGameFragment" />
        <action
            android:id="@+id/action_FlashcardsFragment_to_allWordsFragment"
            app:destination="@id/allWordsFragment" />
    </fragment>
    <fragment
        android:id="@+id/QuizFragment"
        android:name="pl.potocki.polyglotapp.QuizFragment"
        android:label="fragment_quiz"
        tools:layout="@layout/fragment_quiz" >
        <action
            android:id="@+id/action_QuizFragment_to_ChooseGameFragment"
            app:destination="@id/ChooseGameFragment" />
    </fragment>
    <fragment
        android:id="@+id/allWordsFragment"
        android:name="pl.potocki.polyglotapp.AllWordsFragment"
        android:label="@string/fragment_all_words_label"
        tools:layout="@layout/fragment_all_words" >
        <action
            android:id="@+id/action_allWordsFragment_to_FlashcardsFragment"
            app:destination="@id/FlashcardsFragment" />
    </fragment>
</navigation>