<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseLanguageFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sourceLangSpinner"
        android:layout_width="198dp"
        android:layout_height="49dp"
        android:layout_marginBottom="336dp"
        app:layout_constraintBottom_toTopOf="@+id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/targetLangSpinner"
        android:layout_width="197dp"
        android:layout_height="52dp"
        android:layout_marginBottom="184dp"
        app:layout_constraintBottom_toTopOf="@+id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sourceLangText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_language"
        app:layout_constraintBottom_toTopOf="@+id/sourceLangSpinner"
        app:layout_constraintStart_toStartOf="@+id/sourceLangSpinner" />

    <TextView
        android:id="@+id/targetLangText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_language"
        app:layout_constraintBottom_toTopOf="@+id/targetLangSpinner"
        app:layout_constraintStart_toStartOf="@+id/targetLangSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>